# okxx

./: .env  .gitignore  Cargo.toml  Makefile  README.md  findProfitableL2.js  hardhat.config.js  install.sh  one.sh  package-lock.json  package.json  setup.sh
config/: tokens.js
contracts/: FlashLoanArbitrage.sol
data/: 000020.sst  IDENTITY  LOG  LOG.old.1756595746957782  LOG.old.1756596577907352  LOG.old.1756596693942709  LOG.old.1756596820086974  LOG.old.1756596832817111  LOG.old.1756596861623957  MANIFEST-000030  arb_1756671309609.csv  arb_2025-08-31.csv  arb_opportunities_1756671170469.csv  opportunities.csv
infrastructure/: docker-compose.yml
ml/: arbML.py
ml-optimizer/: model.py
new-rust-engine/rust-engine/: .env.example  .gitignore  Cargo.toml  README.md  main_speed.rs  new.sh  new_wallet.txt  one.sh  simulator.rs  start_bot.sh  stop_bot.sh  test_bot.sh  wallet_info.txt
new-rust-engine/rust-engine/contracts/: FlashLoanArbitrage.sol
new-rust-engine/rust-engine/scripts/: deploy_contract.js  generate_wallet.rs  monitor.sh
new-rust-engine/rust-engine/src/: advanced_scanner.rs  arbitrage.rs  config.rs  contracts.rs  flash_loan.rs  flashloan.rs  l2_executor.rs  l2_scanner.rs  lib.rs  main.rs  main_hyperspeed.rs  main_mempool.rs  main_mock_http.rs  main_mock_realistic.rs  main_mock_robust.rs  main_multichain.rs  mempool.rs  monitor.rs  multi_rpc.rs  scanner.rs  wallet.rs
rust-engine/: Cargo.toml  check-balance.js  get-funded.js  package-lock.json  package.json  run-arbitrage.js  setup.sh
rust-engine/scripts/: check-balance.js  get-funds.js
rust-engine/src/: flashloan.rs  main.rs  mempool.rs  simulator.rs
scanner/: liveMainnet.js  megaScanner.js  multiBlockFork.js  multiChainScanner.js  multiPairLive.js  simpleScanner.js  simulateTrades.js
scripts/: bot.js  deploy.js  executeArbitrage.js  priceMonitor.js  testArbitrage.js
src/: arbitrage.rs  arbitrage_scanner.rs  chains.rs  config.rs  data_store.rs  dexs.rs  flash_loan.rs  flash_loan_optimizer.rs  flashloan.rs  gas_tracker.rs  main.rs  mempool.rs  metrics.rs  ml.rs  ml_client.py  ml_engine.py  ml_engine.rs  model_checkpoint.pt  notifications.rs  performance_monitor.rs  pool_discovery.rs  requirements.txt  run.sh  scanner.rs  storage.rs  types.rs  types_america.rs  websocket.rs  websocket_manager.rs
src/exchanges/: binance.rs  mod.rs  okx.rs  uniswap.rs
