[package]
name = "crypto-arbitrage-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ethers = "2.0"
tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
rust_decimal_macros = "1.33"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
url = "2.5"
hex = "0.4"
sha2 = "0.10"
keccak-hash = "0.10"
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
warp = "0.3"
bincode = "1.3"
rocksdb = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
smartcore = "0.4.2"
ndarray = "0.16.1"
blake3 = "1.8.2"

[profile.release]
strip = false
