[package]
name = "arbitrage-scanner"
version = "2.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Web3 and blockchain
ethers = "2.0"

# HTTP and WebSocket - Using specific versions to avoid conflicts
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.20"  # Downgraded to match warp's tungstenite version
warp = "0.3"
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
blake3 = "1.5"
hex = "0.4"  # Added for hex encoding

# Database
mongodb = "3.1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
rocksdb = "0.22"

# Data structures
dashmap = "6.1"
ndarray = "0.16"

# Math and ML
rust_decimal = { version = "1.36", features = ["serde", "maths"] }
rust_decimal_macros = "1.36"
smartcore = "0.3"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus = "0.13"
lazy_static = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "arb-scanner"
path = "src/main.rs"

futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }