[package]
name = "defi-arb-scanner"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Ethereum
ethers = "2.0"
ethers-contract = "2.0"

# Web3
web3 = "0.19"

# Data structures
dashmap = "6.0"
indexmap = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Math and numbers
rust_decimal = "1.35"
num-bigint = "0.4"
num-traits = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Database
rocksdb = "0.22"

# Environment
dotenv = "0.15"

# Utilities
hex = "0.4"
blake3 = "1.5"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1