[package]
name = "arb-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dashmap = "6.1.0"
parking_lot = "0.12.4"
chrono = "0.4.41"
futures = "0.3.31"
futures-util = "0.3"
anyhow = "1.0"
rust_decimal = "1.36"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[profile.release]
strip = false