[package]
name = "arb-scanner"
version = "0.2.0"
edition = "2021"
default-run = "arb-scanner"

[[bin]]
name = "arb-scanner"
path = "src/main.rs"

[lib]
name = "arb_scanner"
path = "src/lib.rs"

[dependencies]
ethers = { version = "2.0", features = ["ws", "ipc"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dashmap = "6.1.0"
parking_lot = "0.12"
chrono = "0.4"
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
hex = "0.4"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false