# File: Cargo.toml

[package]
name = "l2-arbitrage-bot"
version = "1.0.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1"
futures = "0.3"
hex = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
chrono = "0.4"
parking_lot = "0.12"
rand = "0.8"

# For price oracles
reqwest = { version = "0.11", features = ["json"] }

# For MEV protection
flashbots = { version = "0.1", optional = true }

[features]
default = []
mev-protection = ["flashbots"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
panic = "abort"

[[bin]]
name = "l2-arb"
path = "src/main.rs"